# nicookie-monster-bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/: config.py  database.py  handlers.py  main.py  scheduler.py  services.py  states.py
tests/: test_smoke.py
